--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
     "material-icons": "^1.13.12",
     "next": "14.2.1",
     "react": "^18",
